v2.0.0/setup/3.-installation/3.1-set-up-a-development-environment/3.1.5-tooling/4.1.5.1-wsl-support.md
---
metaLinks:
  alternates:
    - >-
      https://app.gitbook.com/s/RziAMaeBMeyiTg5hfFq5/setup/3.-installation/3.1-set-up-a-development-environment/3.1.5-tooling/4.1.5.1-wsl-support
---

# 4.1.5.1 WSL Support

Windows Subsystem for Linux allows the development of OpenCRVS in Windows without having to run VirtualBox or other virtual machines. This page describes some common problems and solutions for them.

### Install <a href="#install" id="install"></a>

For installation of WSL 2 in Windows, [refer to Microsoft's documentation.](https://learn.microsoft.com/en-us/windows/wsl/install)Make sure you're using Visual Studio Code to develop and install the [WSL extension](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.remote-wsl) for it. Do **not** install Docker within the WSL Linux distribution. Docker For Desktop will automatically do that for you.Do not install Docker within WSL. Install **Docker for Desktop** and it will do the integration for you.

### Post-install <a href="#post-install" id="post-install"></a>

Run Powershell, and make sure that you're running the correct WSL version, and Ubuntu is set as the default distribution in WSL.PS C:\Users\dev> wsl --list -vNAME STATE VERSION\* Ubuntu Running 2docker-desktop-data Running 2docker-desktop Running 2Make sure that Docker Desktop is using WSL 2 based engine in it's settings![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2FCCxReqNLi05GgVKnwb07%2Fuploads%2Fx0jdi5DElGLMwIEj6PmO%2Fimage.png?alt=media\&token=157177a7-1021-4dd7-b402-4ac6c88d74f5)

### Usual problems <a href="#usual-problems" id="usual-problems"></a>

#### Only one or few OpenCRVS microservices aren't running <a href="#only-one-or-few-opencrvs-microservices-arent-running" id="only-one-or-few-opencrvs-microservices-arent-running"></a>

Typically this is because Windows is reserving a specific port but the WSL Linux world doesn't pick that up. For example, if gateway fails to run, you can find in Windows Powershell what process is running in the port

```
PS C:\Users\dev> netstat -ano | findstr :7070TCP 127.0.0.1:7070 0.0.0.0:0 LISTENING 20352​PS 
C:\Users\dev> tasklist /FI "PID eq 20352
"​Image Name PID Session Name Session# Mem Usage
========================= ======== ================ =========== ============
wslrelay.exe 20352 Console 1 8 512 K
```

#### WSL hangs or running out of memory <a href="#wsl-hangs-or-running-out-of-memory" id="wsl-hangs-or-running-out-of-memory"></a>

Running all the databases and Node.js services OpenCRVS uses can demand quite a bit of memory. For WSL, we're suggesting at least 16GB of memory but the amount can vary between computers and WSL installations. It's also recommended you allow WSL use more memory by editing `.wslconfig` You can do this by pressing `Win`+`R` and enternotepad.exe %UserProfile%/.wslconfigInsert this content into the file and save. Don't go above the amount of memory visible in task manager (`CTRL` + `Shift` + `ESC`)\[wsl2]memory=16GB
